--- a/src/assets/css/weapons.scss
+++ b/src/assets/css/weapons.scss
@@ -1,3 +1,21 @@
 .weapons {
+  background: rgba(0,0,0,0.9);
+  display: flex;
+  flex-direction: row;
+  .weapon-family {
+    display: flex;
+    flex-direction: row;
 
+  }
+  .weapon-thumb {
+    img {
+      border: 1px solid #181b1e;
+      width: 2.5em;
+      height: 2.5em;
+      margin-right: 0.5em;
+      background: #030307;
+      border-radius: 0.3em;
+      cursor: pointer;
+    }
+  }
 }
