--- a/src/assets/css/weapons.scss
+++ b/src/assets/css/weapons.scss
@@ -1,23 +1,37 @@
 .weapons-page {
   background: rgba(0,0,0,0.9);
+  background: url('../images/mhw-forge.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
   display: flex;
   flex-direction: row;
-  padding: 1em;
+  .weapons-page-wrapper {
+    padding: 1em;
+    display: flex;
+    flex-direction: row;
+  }
+  .weapons-pane {
+    background: rgba(0,0,0,0.7);
+    border-radius: 1em;
+    margin-right: 1em;
+    padding: 0.5em;
+  }
   .weapon-types {
+    background: black;
     color: white;
-    padding-right: 0.5em;
     .weapon-type {
       cursor: pointer;
+      padding: 0.2em 0.5em;
+      font-size: 1.2em;
       &:hover {
         color: black;
-        background: white; 
+        background: white;
       }
     }
   }
   .weapon-family {
     display: flex;
     flex-direction: row;
-
   }
   .weapon-thumb {
     img {
@@ -36,5 +50,13 @@
 }
 
 .weapon-detail {
+  padding: 0.5em;
   background: rgba(255, 255, 255, 0.5);
+  border-radius: 1em;
+  .weapon-picture {
+    img {
+      background: black;
+      border-radius: 1em;
+    }
+  }
 }
