--- a/src/assets/css/weapons.scss
+++ b/src/assets/css/weapons.scss
@@ -15,6 +15,8 @@
     border-radius: 1em;
     margin-right: 1em;
     padding: 0.5em;
+    box-shadow: 3px 4px 6px -1px rgba(0,0,0,0.65);
+
   }
   .weapon-types {
     background: black;
@@ -53,6 +55,8 @@
   padding: 0.5em;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 1em;
+  box-shadow: 3px 4px 6px -1px rgba(0,0,0,0.65);
+
   .weapon-picture {
     img {
       background: black;
