--- a/src/assets/css/weapons.scss
+++ b/src/assets/css/weapons.scss
@@ -13,7 +13,7 @@
   .weapons-pane {
     background: rgba(0,0,0,0.7);
     border-radius: 1em;
-    margin-right: 1em;
+    margin-right: 2em;
     padding: 0.5em;
     box-shadow: 3px 4px 6px -1px rgba(0,0,0,0.65);
 
@@ -50,9 +50,12 @@
     }
   }
 }
-
+.selected-weapon-pane {
+  position: relative;
+}
 .weapon-detail {
-  padding: 0.5em;
+  position: fixed;
+  padding: 1em;
   background: rgba(255, 255, 255, 0.5);
   border-radius: 1em;
   box-shadow: 3px 4px 6px -1px rgba(0,0,0,0.65);
