--- a/src/assets/css/weapons.scss
+++ b/src/assets/css/weapons.scss
@@ -1,11 +1,6 @@
 .weapons-page {
-  background: rgba(0,0,0,0.9);
-  background: url('../images/mhw-forge.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-
   .weapons-page-wrapper {
-    padding: 1em;
+    padding: 4em 1em;
     display: flex;
     flex-direction: row;
   }
@@ -18,6 +13,8 @@
 
   }
   .weapon-types {
+    position: fixed;
+    width: 100%;
     background: #111;
     color: white;
     display: flex;
