--- a/src/assets/css/weapons.scss
+++ b/src/assets/css/weapons.scss
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: row;
   }
-  .weapon-thumb {
+  .item-thumb {
     img {
       border: 2px solid #181b1e;
       width: 2.5em;
