--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -10,3 +10,13 @@
   display: flex;
   flex-direction: row;
 }
+
+.top-bar {
+  position: fixed;
+  width: 100%;
+  background: #111;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  box-shadow: 3px 4px 6px -1px rgba(0,0,0,0.65);
+}
