--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Open sans';
+}
+
 .box {
   border-radius: 1em;
   margin-right: 2em;
@@ -19,4 +23,10 @@
   display: flex;
   flex-direction: row;
   box-shadow: 3px 4px 6px -1px rgba(0,0,0,0.65);
+}
+
+.item-detail {
+  .title {
+
+  }
 }
