--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: row;
   .side-menu {
+    font-family: 'Goblin hand';
+    text-align: center;
     flex: none;
     display: flex;
     flex-direction: column;
@@ -29,7 +31,7 @@
     width: 100vw;
     height: 100vh;
     background-attachment: fixed;
-    background: url('../images/mhw-bg.jpg');
+    background: url('../images/mhw-bg-clear.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     overflow: scroll;
