--- a/src/assets/css/weapons.scss
+++ b/src/assets/css/weapons.scss
@@ -40,7 +40,8 @@
 }
 .weapon-detail {
   position: fixed;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(1, 11, 1, 0.5);
+  color: white;
   .weapon-picture {
     img {
       background: black;
