--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -26,7 +26,20 @@ body {
 }
 
 .item-detail {
-  .title {
-
+  position: fixed;
+  background: rgba(1, 11, 1, 0.5);
+  color: white;
+  width: 15em;
+  .item-title {
+    text-align: center;
+    margin-bottom: 1em;
+  }
+  .item-picture {
+    img {
+      width: 100%;
+      margin: auto;
+      background: black;
+      border-radius: 1em;
+    }
   }
 }
