--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -35,11 +35,16 @@ body {
     margin-bottom: 1em;
   }
   .item-picture {
+    width: 100%;
+    background: rgba(1, 11, 1, 0.9);
+    filter: blur(1px);
+    border-radius: 1em;
+    display: flex;
+    align-items: center;
+    min-height: 13em;
     img {
-      width: 100%;
+      width: auto;
       margin: auto;
-      background: black;
-      border-radius: 1em;
     }
   }
 }
