add details to weapons

--- a/src/assets/css/common.scss
+++ b/src/assets/css/common.scss
@@ -42,6 +42,7 @@ ul {
 }
 
 .box {
+  width: auto;
   border-radius: 0.5em;
   margin-right: 2em;
   padding: 0.5em;
@@ -68,7 +69,7 @@ ul {
   position: fixed;
   background: rgba(1, 11, 1, 0.5);
   color: white;
-  width: 15em;
+  min-width: 15em;
   .item-title {
     text-align: center;
     margin-bottom: 1em;
@@ -104,5 +105,11 @@ ul {
         }
       }
     }
+  }
+  .item-detail-stats {
+    margin-left: 0.5em;
+    padding-left: 0.5em;
+    border-left: 2px dashed rgba(1, 11, 1, 0.6);
+
   }
 }
